@@ -17,6 +17,8 @@ Version 1.7.3+svn:
      to story text instead
    * Fixed 100% CPU usage on storyscreens with no text (e.g. map screens)
    * Fix ODR issues in gui2
+ * Animations
+   * Movement have the number of steps done in value and the number of step left in value_second, this allows take-off and landing animations
 
 Version 1.7.3:
  * AI:
